# --------------------------------------------------------------------------------------------------
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2025 Minkyu Kil
# --------------------------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.22)
project(erp_mini_util)

# --------------------------------------------------------------------------------------------------
# Find required packages
# --------------------------------------------------------------------------------------------------
find_package(erp_mini_cmake REQUIRED)
erp_mini_package()

# --------------------------------------------------------------------------------------------------
# Add library
# --------------------------------------------------------------------------------------------------
ament_auto_add_library(${PROJECT_NAME} SHARED
    src/log.cpp
)

# --------------------------------------------------------------------------------------------------
# Install package
# --------------------------------------------------------------------------------------------------
ament_auto_package(USE_SCOPED_HEADER_INSTALL_DIR)